--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,3 +5,11 @@
 .subtitle {
   text-align: center;
 }
+
+.footer {
+  padding-top: 2rem !important;
+  padding-bottom: 2rem !important; 
+}
+.copyright {
+  text-align: right;
+}
