clarifies class names for different styling

--- a/src/components/Location/Location.css
+++ b/src/components/Location/Location.css
@@ -1,7 +1,3 @@
-.tile.is-child {
-  text-align: center;
-}
-
-.tile.is-ancestor {
-  margin: 20px 0 !important;
+.location-columns {
+  margin: 2.5em 0 !important;
 }
