continues unsuccessfully trying to use bulma sass variables

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -17,3 +17,6 @@ $body-background-color: $mint-cream;
 $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
+
+// color variables:
+$pastel-red: #FF6B6B;
