adds redux-persist

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,7 @@
 // Import a Google Font
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Yellowtail');
 
-@import './variables';
+@import './sass/variables.sass';
 
 // Import only what you need from Bulma
 @import "../node_modules/bulma/sass/utilities/_all.sass";
