--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,6 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Yellowtail');
 
 
-
 // Import only what you need from Bulma
 @import "../node_modules/bulma/sass/utilities/_all.sass";
 @import "../node_modules/bulma/sass/base/_all.sass";
@@ -16,10 +15,12 @@
 @import "../node_modules/bulma/sass/layout/hero.sass";
 @import "../node_modules/bulma/sass/layout/section.sass";
 
+
 @import './variables';
 
 @import './navbar';
 
+// pushes components down to account for fixed navbar
 .component-container {
   padding-top: 4rem; 
 }
