--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -7,11 +7,11 @@ $mint-cream: #F7FFF7;
 $family-sans-serif: 'Raleway', sans-serif;
 $family-primary: $family-sans-serif;
 $family-secondary: 'Yellowtail', cursive;
-// [] TO BE CHANGED
+// [] TO BE CHANGED?
 $widescreen-enabled: false;
 $fullhd-enabled: false;
 
-// [] TO BE CHANGED
+// [] TO BE CHANGED?
 // Update some of Bulma's component variables
 $body-background-color: $mint-cream;
 $control-border-width: 2px;
