uses sass to style navbar, carousel, and about components

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,12 +1,11 @@
 
-// [] TO BE CHANGED
 // Set your brand colors
 $mint-cream: #F7FFF7;
 
 // Update Bulma's global variables
 $family-sans-serif: 'Raleway', sans-serif;
 $family-primary: $family-sans-serif;
-$family-secondary: 'Yellowtail', cursive;
+$family-secondary: 'Pacifico', cursive;
 // [] TO BE CHANGED?
 $widescreen-enabled: false;
 $fullhd-enabled: false;
@@ -19,4 +18,5 @@ $input-border-color: transparent;
 $input-shadow: none;
 
 // color variables:
-$pastel-red: #FF6B6B;
+$medium-turquoise: #4ECDC4;
+$english-green: #1A535C;
