--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -1,15 +1,32 @@
 .navbar {
-  background-color: $pastel-red;
+  a {
+    color: $mint-cream;
+  };
+  a:hover {
+    background-color: transparent;
+    color: $english-green;
+  }
+  background-color: $medium-turquoise;
   position: fixed !important;
   width: 100%;
 };
 
-a.navbar-item:hover {
-  background-color: transparent;
-}
-
 .company-icon {
   color: $mint-cream;
   font-family: $family-secondary;
-  font-size: $size-2;
+  font-size: $size-3;
+};
+
+.nav-company {
+  padding-left: .3em;
+};
+
+// regions dropdown menu
+// arrow in regions dropdown
+.navbar-link:not(.is-arrowless)::after {
+  border-color: $english-green;
+};
+
+.navbar-dropdown {
+  background-color: $medium-turquoise;
 };
