adds footer styling

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,9 +37,11 @@ a:hover {
   text-align: center;
 };
 
+
 // import partial scss files
 @import './navbar';
 @import './carousel';
 @import './about';
 @import './regionsquare';
+@import './footer';
 
