--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -5,6 +5,7 @@
 .about-title {
   color: $english-green;
   font-family: $family-secondary;
+  font-size: 8rem !important;
   margin-top: 1.5rem;
   text-align: center;
 };
