adds styles to individual reviews and profile

--- a/sass/_country.scss
+++ b/sass/_country.scss
@@ -2,6 +2,7 @@
   h3 {
     font-size: 3rem !important;
   };
+  padding: 0 2rem;
 };
 
 .table {
@@ -12,6 +13,6 @@
   };
 };
 
-.reviews-title {
-  margin-bottom: 3.5rem !important;
+.reviews-list {
+  margin: 3.5rem 0 !important;
 };
