adds delete modal to confirm delete review

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6534,7 +6534,7 @@ h3 {
 .message-header {
   background-color: rgba(26, 83, 91, 0.8); }
 
-.button-edit-review {
+.button-span {
   margin-right: .4em; }
 
 .message-body {
