--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -6,7 +6,14 @@
 };
 
 .username-icon {
+  background-color: $english-green;
+  border-radius: 50%;
+  color: $mint-cream;
   font-family: $family-secondary;
+  margin: auto;
+  padding: .2em;
+  text-transform: capitalize;
+  width: 28%;
 };
 
 .username {
