--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -11,6 +11,10 @@
   width: 100%;
 };
 
+.navbar-item {
+  background-color: $medium-turquoise;;
+};
+
 .company-icon {
   color: $mint-cream;
   font-family: $family-secondary;
