--- a/sass/main.scss
+++ b/sass/main.scss
@@ -64,6 +64,17 @@ h3 {
   color: $mint-cream;
 };
 
+
+@media only screen and (max-width: 768px) {
+  .columns {
+    display: flex;
+  };
+};
+
+@media only screen and (max-width: 414px) {
+
+};
+
 // import partial scss files
 @import './navbar';
 @import './carousel';
