--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6412,6 +6412,10 @@ h3 {
   background-color: #1A535C;
   color: #F7FFF7; }
 
+@media only screen and (max-width: 768px) {
+  .columns {
+    display: flex; } }
+
 .navbar {
   background-color: #4ECDC4;
   position: fixed !important;
@@ -6421,6 +6425,9 @@ h3 {
   .navbar a:hover {
     background-color: transparent;
     color: #1A535C; }
+
+.navbar-item {
+  background-color: #4ECDC4; }
 
 .company-icon {
   color: #F7FFF7;
@@ -6491,6 +6498,13 @@ h3 {
 .about-summary {
   padding: 0 15%; }
 
+@media only screen and (max-width: 511px) {
+  .about-title {
+    font-size: 5rem !important; } }
+
+.location-columns {
+  margin: 2.5em 0 !important; }
+
 .region-square {
   position: relative; }
 
@@ -6514,6 +6528,25 @@ h3 {
   right: 0;
   top: 40%; }
 
+@media only screen and (max-width: 768px) {
+  .location-name-overlay {
+    height: 94%;
+    left: 2.8%;
+    top: 2.8%;
+    width: 94%; }
+  .location-name {
+    font-size: 4em !important; } }
+
+@media only screen and (max-width: 547px) {
+  .location-name {
+    font-size: 2.5em !important; } }
+
+@media only screen and (max-width: 414px) {
+  .location-columns {
+    display: block; }
+  .region-square {
+    width: 100% !important; } }
+
 .region-container h3 {
   font-size: 4rem !important; }
 
@@ -6521,6 +6554,9 @@ h3 {
   padding: 0 2rem; }
   .country-container h3 {
     font-size: 3rem !important; }
+
+.table-container {
+  overflow: auto; }
 
 .table {
   background-color: #F7FFF7;
@@ -6592,6 +6628,10 @@ h3 {
   background-color: #F7FFF7;
   padding: 2em; }
 
+@media only screen and (max-width: 414px) {
+  .saved-tour-card {
+    width: 100% !important; } }
+
 .footer {
   background-color: #4ECDC4;
   color: #1A535C;
@@ -6608,3 +6648,7 @@ h3 {
 
 .fa-github {
   margin-right: .5em; }
+
+@media only screen and (max-width: 414px) {
+  .is-one-third-mobile {
+    width: 50% !important; } }
